--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,18 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+.img-nav {
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 50px;
+}
+
+.img-home {
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 200px;
+}
