--- a/public/style.css
+++ b/public/style.css
@@ -43,3 +43,15 @@ form {
   padding: 5px;
   width: 200px;
 }
+
+div.products-list-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  max-width: auto;
+  margin: 0 auto;
+}
+
+img.single-product-img {
+  width: 300px;
+  height: 300px;
+}
