--- a/public/style.css
+++ b/public/style.css
@@ -55,8 +55,8 @@ form {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 500px;
-  height: 450px;
+  width: 450px;
+  height: 400px;
 }
 
 div.products-list-container {
@@ -86,7 +86,7 @@ img.single-product-img {
   height: 300px;
 }
 
-.single-product-container {
+/* .single-product-container {
   align-items: center;
   align-content: center;
   text-align: justify;
@@ -95,7 +95,7 @@ img.single-product-img {
   width: 20%;
   margin: auto;
   padding: 5px;
-}
+} */
 
 .card-text {
   align-items: center;
@@ -106,4 +106,14 @@ img.single-product-img {
   width: 50%;
   margin: auto;
   padding: 5px;
+}
+
+.container-juices {
+  align-items: center;
+  align-content: center;
+
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  margin: auto;
 }
